fix: scrollbar

--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -34,6 +34,18 @@
 }
 
 @media screen and (min-width: 900px) {
+  ::-webkit-scrollbar {
+    width: 0.8rem;
+  }
+
+  ::-webkit-scrollbar-track {
+    background-color: var(--active-dark-font-color);
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background-color: var(--active-theme-color);
+  }
+
   html {
     font-size: 10px;
   }
@@ -58,6 +70,7 @@
 
   .theme-change-box {
     top: var(--pad-block);
+    gap: calc(var(--pad-inline) + 0.8rem);
   }
 
   .theme-change-icons {
