--- a/css/style.css
+++ b/css/style.css
@@ -53,16 +53,16 @@
 }
 
 /* ::-webkit-scrollbar {
-  width: 0.8rem;
-}
+    width: 0.8rem;
+  }
 
-::-webkit-scrollbar-track {
-  background-color: var(--active-dark-font-color);
-}
+  ::-webkit-scrollbar-track {
+    background-color: var(--active-dark-font-color);
+  }
 
-::-webkit-scrollbar-thumb {
-  background-color: var(--active-theme-color);
-} */
+  ::-webkit-scrollbar-thumb {
+    background-color: var(--active-theme-color);
+  } */
 
 html {
   font-size: 62.5%;
@@ -278,7 +278,7 @@ p {
 
 /* Theme Change Box Start */
 .theme-change-box {
-  gap: calc(var(--pad-inline) + 5px);
+  gap: calc(var(--pad-inline) - 0.2rem);
   position: fixed;
   z-index: 100;
   right: 0;
@@ -314,10 +314,6 @@ p {
 
 .theme-change-icons > div .theme-icon ion-icon {
   font-size: 2.5rem;
-}
-
-.theme-change-icons > div .mobile-toggle {
-  /* margin-top: 1.2rem; */
 }
 
 .show-theme-colors-icon i {
